# Easy-IPv6-Helper

./: .gitignore  Cargo.toml  README.md  build.sh  complex.sh  config.example.json
src/: main.rs  mods.rs
src/mods/: config.rs  host.rs  network.rs
src/mods/handle/: ra.rs
src/mods/host/: config_interface.rs  dhcpv6.rs  radvd.rs  router.rs
src/mods/network/: interfaces.rs  ipv6.rs
