[package]
name = "pch-easy-ipv6"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
pnet = "0.34.0"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["serde_derive"] }
serde_json = "1.0.111"

[profile.fast]
inherits = "release"
opt-level = 3
debug = false
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
strip = "debuginfo"

[features]
# unused_code = []
